@@ -3,10 +3,10 @@ module gitlab.com/tslocum/cview
 go 1.12
 
 require (
-	github.com/gdamore/tcell/v2 v2.0.0-dev.0.20201014051707-aeb3a1194825
+	github.com/gdamore/tcell/v2 v2.0.0
 	github.com/lucasb-eyer/go-colorful v1.0.3
 	github.com/mattn/go-runewidth v0.0.9
 	github.com/rivo/uniseg v0.1.0
 	gitlab.com/tslocum/cbind v0.1.2
-	golang.org/x/sys v0.0.0-20201014080544-cc95f250f6bc // indirect
+	golang.org/x/sys v0.0.0-20201015000850-e3ed0017c211 // indirect
 )
